--- a/src/components/QueryPage/QueryPage.style.scss
+++ b/src/components/QueryPage/QueryPage.style.scss
@@ -1,5 +1,5 @@
-// .query-page {
-//     display: flex;
-//     flex-direction: column;
-//     height: 100%;
-// }
+.query-page {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
