--- a/src/components/QueryPage/HeaderComponent/SearchComponent/SearchFormComponent/SearchForm.style.scss
+++ b/src/components/QueryPage/HeaderComponent/SearchComponent/SearchFormComponent/SearchForm.style.scss
@@ -17,10 +17,13 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        padding: 15px 0;
+        align-content: center;
     }
 
     &__filter {
         display: flex;
         flex-flow: row nowrap;
+        align-items: center;
     }
 }
