--- a/src/components/QueryPage/ResultsComponent/ResultsContainer.style.scss
+++ b/src/components/QueryPage/ResultsComponent/ResultsContainer.style.scss
@@ -1,6 +1,19 @@
 .results {
-    // flex: 1 0 auto;
+    flex: 1 0 auto;
     display: flex;
     flex-flow: column;
-    padding: 0 30px;
+    
+    &__filter-container, &__list-container {
+        padding: 0 100px;   
+    }
+
+    &__filter-container {
+        background-color: lavender;
+    }
+
+    &--nodata {
+        justify-content: center;
+    }
+
+
 }
