feat/ cypress test

--- a/src/components/QueryPage/ResultsContainer/ResultsListComponent/ResultList.style.scss
+++ b/src/components/QueryPage/ResultsContainer/ResultsListComponent/ResultList.style.scss
@@ -6,8 +6,8 @@
         display: flex;
         flex-flow: row wrap;
 
-        :nth-child(3n) {
-            margin-right: 0;
-        }
+        // :nth-child(3n) {
+        //     margin-right: 0;
+        // }
     }
 }
